_sources/examples/gallery_examples/01-apdlmath-examples/solve_sparse_matrix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-apdlmath-examples/solve_sparse_matrix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py:


Performing Sparse Factorization and Solve Operations
----------------------------------------------------

Using APDLMath, you can solve linear systems of equations based on
sparse or dense matrices.

.. GENERATED FROM PYTHON SOURCE LINES 9-17

.. code-block:: default

    from ansys.mapdl.core import launch_mapdl
    from ansys.mapdl.core.examples import vmfiles

    # Start MAPDL as a service and create an APDLMath object.
    mapdl = launch_mapdl()
    mm = mapdl.math









.. GENERATED FROM PYTHON SOURCE LINES 18-26

Factorize and Solve Sparse Linear Systems
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
First, run a MAPDL solve to create a .full file
We use a model from the official verification manual.

After a solve command, the full contains the assemblied stiffness
matrix, mass matrix, and the load vector.


.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: default

    out = mapdl.input(vmfiles["vm153"])








.. GENERATED FROM PYTHON SOURCE LINES 29-31

List the files in current directory


.. GENERATED FROM PYTHON SOURCE LINES 31-33

.. code-block:: default

    mapdl.list_files()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['HexBeam.cdb', 'LatheCutter.anf', 'PRSMEMB.DSP', 'PRSMEMB.emat', 'PRSMEMB.esav', 'PRSMEMB.full', 'PRSMEMB.mntr', 'PRSMEMB.mode', 'PRSMEMB.rst', 'PRSMEMB000.jpg', 'PRSMEMB001.jpg', 'PRSMEMB002.jpg', 'PRSMEMB003.jpg', 'PRSMEMB004.jpg', 'PRSMEMB005.jpg', 'PRSMEMB006.jpg', 'PRSMEMB007.jpg', 'PRSMEMB008.jpg', 'PRSMEMB009.jpg', 'PRSMEMB010.jpg', 'PRSMEMB011.jpg', 'SCRATCH', 'SOLVIT.MAC', 'TABLE_1', 'TABLE_2', '__tmp_sys_out_aauqlynbav__', '__tmp_sys_out_aenbqncisq__', '__tmp_sys_out_aibohrjwyy__', '__tmp_sys_out_brvdxjdrht__', '__tmp_sys_out_bzohxdvxii__', '__tmp_sys_out_ccmogbzbse__', '__tmp_sys_out_czcakjgujv__', '__tmp_sys_out_dfopzradso__', '__tmp_sys_out_dzcqkhalif__', '__tmp_sys_out_gcfzpplkhl__', '__tmp_sys_out_gpjlzbuydp__', '__tmp_sys_out_grbzstteqj__', '__tmp_sys_out_hysfpbufop__', '__tmp_sys_out_kpfygllpna__', '__tmp_sys_out_mjegfcmgoh__', '__tmp_sys_out_mwvayadjrg__', '__tmp_sys_out_mxktogghey__', '__tmp_sys_out_npslarbfye__', '__tmp_sys_out_okhulrfqud__', '__tmp_sys_out_pkmormjrbq__', '__tmp_sys_out_qaujqxuzro__', '__tmp_sys_out_qwmvuqhojr__', '__tmp_sys_out_ribzksrbkc__', '__tmp_sys_out_riwzjzuzgf__', '__tmp_sys_out_sqjgcymiwu__', '__tmp_sys_out_swwqdkruti__', '__tmp_sys_out_tcqiylozye__', '__tmp_sys_out_uekpcyzaar__', '__tmp_sys_out_unehvukcla__', '__tmp_sys_out_urraofmqcp__', '__tmp_sys_out_usbheifdzn__', '__tmp_sys_out_uxijxxstqv__', '__tmp_sys_out_ygrtmedkyi__', '__tmp_sys_out_zqsiabfnni__', '_tmp.iges', 'anaconda-post.log', 'anstmp', 'ansys_inc', 'bin', 'bracket.iges', 'dev', 'etc', 'file.DSP', 'file.ans_log', 'file.emat', 'file.err', 'file.esav', 'file.full', 'file.ldhi', 'file.log', 'file.mlv', 'file.mntr', 'file.mode', 'file.page', 'file.r001', 'file.rdb', 'file.rsx', 'file.rth', 'file.stat', 'file000.jpg', 'file000.png', 'file001.png', 'gvjgiswaep.txt', 'home', 'lib', 'lib64', 'manifold_geometry.anf', 'media', 'mnt', 'oeajytvjga.txt', 'opt', 'proc', 'root', 'run', 'sbin', 'sector.cdb', 'srv', 'sys', 'tmp', 'tmp.cdb', 'tmp_abranwiihk.inp', 'tmp_aubgqdwrym.inp', 'tmp_ctfbmxrzaf.inp', 'tmp_ekeiylcrfz.inp', 'tmp_eugvxmztbr.inp', 'tmp_faqenwrilv.inp', 'tmp_gwxerttpjy.inp', 'tmp_odywyqjztk.inp', 'tmp_oqaayaxksj.inp', 'tmp_phayymvkmg.inp', 'tmp_pmafjhyetf.inp', 'tmp_teyyvcvirw.inp', 'tmp_tlohsoswfw.inp', 'tmp_wlrxgilwnw.inp', 'tmp_wzdwbzjvmp.inp', 'tmp_yiharxngfo.inp', 'tmp_zcudrrdaqi.inp', 'ttuekfufyl.txt', 'usr', 'var', 'vm1.dat', 'vm1.vrt', 'vm153.dat', 'vm153.vrt', 'vm5.dat', 'vm5.vrt', 'wing.dat']



.. GENERATED FROM PYTHON SOURCE LINES 34-41

Extract the Stiffness matrix from the ``FULL`` file, in a sparse
matrix format.

You can get help on the stiff function with ``help(mm.stiff)``

Printout the dimensions of this Sparse Matrix


.. GENERATED FROM PYTHON SOURCE LINES 41-44

.. code-block:: default

    k = mm.stiff(fname="PRSMEMB.full")
    k





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Sparse APDLMath Matrix (126, 126)



.. GENERATED FROM PYTHON SOURCE LINES 45-47

Get a copy of the K Sparse Matrix as a Numpy Array


.. GENERATED FROM PYTHON SOURCE LINES 47-50

.. code-block:: default

    ky = k.asarray()
    ky





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <126x126 sparse matrix of type '<class 'numpy.float64'>'
    	with 738 stored elements in Compressed Sparse Row format>



.. GENERATED FROM PYTHON SOURCE LINES 51-55

Extract the load vector from the ``FULL`` file.

Printout the norm of this vector.


.. GENERATED FROM PYTHON SOURCE LINES 55-58

.. code-block:: default

    b = mm.rhs(fname="PRSMEMB.full")
    b.norm()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    3.472960080375275e-05



.. GENERATED FROM PYTHON SOURCE LINES 59-61

Get a copy of the load vector as a numpy array


.. GENERATED FROM PYTHON SOURCE LINES 61-63

.. code-block:: default

    by = b.asarray()








.. GENERATED FROM PYTHON SOURCE LINES 64-66

Factorize the Stifness Matrix using the MAPDL DSPARSE solver


.. GENERATED FROM PYTHON SOURCE LINES 66-68

.. code-block:: default

    s = mm.factorize(k)








.. GENERATED FROM PYTHON SOURCE LINES 69-71

Solve the linear system


.. GENERATED FROM PYTHON SOURCE LINES 71-73

.. code-block:: default

    x = s.solve(b)








.. GENERATED FROM PYTHON SOURCE LINES 74-76

Print the **norm** of the solution vector


.. GENERATED FROM PYTHON SOURCE LINES 76-78

.. code-block:: default

    x.norm()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    5.8159282970303395e-08



.. GENERATED FROM PYTHON SOURCE LINES 79-83

We check the accuracy of the solution, by verifying that

:math:`KX - B = 0`


.. GENERATED FROM PYTHON SOURCE LINES 83-87

.. code-block:: default

    kx = k.dot(x)
    kx -= b
    print("Residual error:", kx.norm() / b.norm())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Residual error: 1.5773497545947609e-15




.. GENERATED FROM PYTHON SOURCE LINES 88-90

Summary of all allocated APDLMath Objects


.. GENERATED FROM PYTHON SOURCE LINES 90-92

.. code-block:: default

    mm.status()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    APDLMATH PARAMETER STATUS-  (      5 PARAMETERS DEFINED)

      Name                   Type            Mem. (MB)       Dims            Workspace

       PTBMGQ                SMAT            0.011           [126:126]               1
       ECRVPA                VEC             0.001           126             1
       HIPITO                VEC             0.001           126             1
       SBGINZ                VEC             0.001           126             1
       MONWNG                LSENGINE        --              --              1




.. GENERATED FROM PYTHON SOURCE LINES 93-95

Delete all APDLMath Objects


.. GENERATED FROM PYTHON SOURCE LINES 95-98

.. code-block:: default

    mm.free()









.. GENERATED FROM PYTHON SOURCE LINES 99-100

stop mapdl

.. GENERATED FROM PYTHON SOURCE LINES 100-101

.. code-block:: default

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.799 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: solve_sparse_matrix.py <solve_sparse_matrix.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: solve_sparse_matrix.ipynb <solve_sparse_matrix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
